<resources>
    <string name="app_name">ChnuMarks</string>
    <string name="web_client_id">970531532317-g7edmvcm368bouhu23blqirlbbbuf3fc.apps.googleusercontent.com</string>

    <string name="navigation_menu_schedule">Schedule</string>
    <string name="navigation_menu_edit">Edit</string>
    <string name="navigation_menu_report">Report</string>
    <string name="navigation_menu_settings">Settings</string>
    <string name="navigation_menu_exit">Exit</string>
    <string name="navigation_header_default_email">default.email@gmail.com</string>
    <string name="navigation_header_default_name">Default Name</string>

    <string name="tab_schedule">Schedule</string>
    <string name="tab_subjects">Subjects</string>


    <string name="week_1_schedule_fragment">1st week</string>
    <string name="week_2_schedule_fragment">2st week</string>
    <string name="monday_schedule_fragment">Monday</string>
    <string name="tuesday_schedule_fragment">Tuesday</string>
    <string name="wednesday_schedule_fragment">Wednesday</string>
    <string name="thursday_schedule_fragment">Thursday</string>
    <string name="friday_schedule_fragment">Friday</string>
    <string name="edit_schedule_list_item_add_new">Add new</string>
    <string name="create_subject_general_text">General</string>
    <string name="create_subject_tasks_text">Tasks</string>
    <string name="create_subject_group_hint">Group</string>
    <string name="create_subject_subject_name_text">Subject Name</string>
    <string name="create_lab_description">Task Description</string>
    <string name="create_lab_max_points">Max Points</string>
    <string name="lab_max_points">%1$d point(s)</string>
    <string name="submit">submit</string>
    <string name="create_subject">Create subject</string>

    <string name="edit_subject_list_item">%1$s (%2$s)</string>

    <string-array name="lab_types">
        <item>Task Type</item>
        <item>Lab</item>
        <item>Test</item>
    </string-array>
</resources>
