<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_menu_schedule"
            android:icon="@mipmap/ic_toc_black_24dp"
            android:title="@string/navigation_menu_schedule" />
        <item
            android:id="@+id/navigation_menu_edit"
            android:icon="@mipmap/ic_edit"
            android:title="@string/navigation_menu_edit" />
        <item
            android:id="@+id/navigation_menu_report"
            android:icon="@drawable/ic_report_24dp"
            android:title="@string/navigation_menu_report" />
        <item
            android:id="@+id/navigation_menu_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/navigation_menu_settings" />
        <item
            android:id="@+id/navigation_menu_exit"
            android:icon="@mipmap/ic_exit"
            android:title="@string/navigation_menu_exit" />
    </group>
</menu>