<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="32dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_lab_black_24dp"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="16dp">

        <Spinner
            android:id="@+id/create_lab_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/lab_types">

        </Spinner>

        <EditText
            android:id="@+id/create_lab_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:hint="@string/create_lab_description" />

        <EditText
            android:id="@+id/create_lab_max_points"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:hint="@string/create_lab_max_points" />
        <Button
            android:id="@+id/create_lab_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:paddingTop="16dp"
            android:layout_gravity="end"/>

    </LinearLayout>

</LinearLayout>
